@@ -145,6 +145,7 @@ In Wagtail 2.16, we introduced support for Windows High Contrast mode (WHCM). Th
  * Resolve multiple form submissions index listing page layout issues including title not being visible on mobile and interaction with large tables (Paarth Agarwal)
  * Ensure ModelAdmin single selection lists show correctly with Django 4.0 form template changes (Coen van der Kamp)
  * Ensure icons within help blocks have accessible contrasting colours, and links have a darker colour plus underline to indicate they are links (Paarth Agarwal)
+ * Ensure consistent sidebar icon position whether expanded or collapsed (Scott Cranfill)
 
 
 ## Upgrade considerations
