@@ -115,6 +115,7 @@ Changelog
  * Fix: Resolve multiple form submissions index listing page layout issues including title not being visible on mobile and interaction with large tables (Paarth Agarwal)
  * Fix: Ensure ModelAdmin single selection lists show correctly with Django 4.0 form template changes (Coen van der Kamp)
  * Fix: Ensure icons within help blocks have accessible contrasting colours, and links have a darker colour plus underline to indicate they are links (Paarth Agarwal)
+ * Fix: Ensure consistent sidebar icon position whether expanded or collapsed (Scott Cranfill)
 
 
 3.0.1 (16.06.2022)
